Fix alignment of input

--- a/src/components/input/_input.scss
+++ b/src/components/input/_input.scss
@@ -130,7 +130,7 @@
     background-position: 9px 7px;
     background-repeat: no-repeat;
     background-size: 24px 24px;
-    padding-left: 2rem;
+    padding-left: 2.4rem;
 
     &:focus,
     &:active,
